--- a/.github/workflows/deploy-apigee-apiproxy.yml
+++ b/.github/workflows/deploy-apigee-apiproxy.yml
@@ -45,6 +45,7 @@ jobs:
         APIGEE_ENV: eval-2
         API_NAME: sample-cloud-logging
         GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+        SERVICE_ACCOUNT_EMAIL: github-workflow-SA@apigee-412820.iam.gserviceaccount.com
       run: |
         TOKEN=$(gcloud auth print-access-token)
         RESPONSE=$(curl -X POST -H "Authorization: Bearer $TOKEN" \
@@ -59,4 +60,6 @@ jobs:
         fi
 
         curl -X POST -H "Authorization: Bearer $TOKEN" \
+          -H "x-goog-user-project: $APIGEE_ORG" \
+          -H "service-account: $SERVICE_ACCOUNT_EMAIL" \
           "https://apigee.googleapis.com/v1/organizations/$APIGEE_ORG/environments/$APIGEE_ENV/apis/$API_NAME/revisions/$REVISION/deployments"
