--- a/.github/workflows/deploy-apigee-apiproxy.yml
+++ b/.github/workflows/deploy-apigee-apiproxy.yml
@@ -59,4 +59,4 @@ jobs:
           exit 1
         fi
 
-        gcloud apigee apis deploy $REVISION --api=$API_NAME --environment=$APIGEE_ENV --service-account=$SERVICE_ACCOUNT_EMAIL
+        gcloud apigee apis deploy $REVISION --api=$API_NAME --environment=$APIGEE_ENV --impersonate-service-account=$SERVICE_ACCOUNT_EMAIL
